bdr.BDR.scala.error
Erreur de compilation :
BDR:2: error: not found: type string
  litMessage() : string
                 ^BDR:3: error: not found: value string
  if (string=='R'){
      ^