bdr.BDR.scala.code
if (estSurMessage()){
  litMessage() : string
  if (string=='R'){
    droite()
    avance()
  }
}